manifest-repo/templates/deployment.yaml
# Deploy Apps application with Liveness and Readiness Probe without pvc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: dev
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      serviceAccountName: hello-world-admin
      containers:
        - name: hello-world
          image: lanxic/hello-world
          ports:
            - name: httpport
              containerPort: 80
